--- a/paper/sections/intro.tex
+++ b/paper/sections/intro.tex
@@ -1,8 +1,8 @@
 \section{Introduction}
-In open collaboration, knowledge is produced by a multitude of contributors, according to the rules of peer-production as a form of labor organization emerging in computer and Internet supported environments \cite{benkler2002}. The most basic component of peer-production is {\it task self-selection}: participants in open collaboration freely choose how and when to contribute, with limited or no vertical organization.  Starting with open source software development, open collaboration has permeated in a broad variety of industries \cite{benkler2011leviathan}. Wikipedia is one of the most successful examples of open collaboration, going head-to-head with major online content providers, and competing on accuracy with traditionally edited encyclopedia \cite{giles2005internet}. 
+In open collaboration, knowledge is produced by a multitude of contributors, according to the rules of peer-production as a form of labor organization emerging in computer and Internet supported environments \cite{benkler2002}. The most basic component of peer-production is {\it task self-selection}: participants in open collaboration freely choose how and when to contribute, with none or limited vertical organization.  Starting with open source software development, open collaboration has permeated a broad variety of industries \cite{benkler2011leviathan}. Wikipedia is one of the most successful examples of open collaboration, going head-to-head with major online content providers, and competing on accuracy with traditionally edited encyclopedia \cite{giles2005internet}. 
 
-Nonetheless, it remains hard to understand how knowledge is pulled from the self-organization of many contributing individuals with their heterogenous backgrounds and motivations. The production process of many open collaboration communities exhibits complex critical cascades of input, which in turn lead to super-linear productive bursts of contributions \cite{sornette2014howmuch}. In other words, the dynamics of contributions remain deeply entangled, and therefore, tell little on how the heterogenous inputs by individuals in open collaboration are organized to achieve best quality. Moreover, the multiplicity of contribution organization in open collaboration suggests that community organization is ``tuned" to a specific kind of knowledge. 
+Nonetheless, it remains hard to understand how knowledge is pulled from the self-organization of many contributing individuals with their heterogeneous backgrounds and motivations. The production process of many open collaboration communities exhibits complex critical cascades of input, which in turn lead to super-linear productive bursts of contributions \cite{sornette2014howmuch}. In other words, the dynamics of contributions remain deeply entangled, and therefore, the way that individual inputs effect the output are obscure. Moreover, the multiplicity of contribution structures in open collaboration suggests that any particular community is ``tuned" or optimized for a specific kind of knowledge. 
 
-Here, we propose that the contribution structure is deeply tied to type of knowledge produced. We develop an iterative approach to account for the complex relationships (i.e. the bi-partite network) between contributors and units of knowledge, such as articles in Wikipedia. For 12 Wikipedia categories, we demonstrate how the structure of knowledge contribution can be disentangled, and how it influences the quality of knowledge produced.
+Here, we propose that the contribution structure is deeply tied to type of knowledge produced. We develop an iterative approach to account for the complex relationships (i.e. the bi-partite network) between contributors and units of knowledge, such as editors and articles, respectively in the case of Wikipedia. Over 12 Wikipedia categories, we demonstrate how the contribution structure of knowledge can be disentangled, and how it influences the quality of knowledge produced.
 
 The paper is organized as follows. The reader is first introduced to relevant literature . The method, data employed and results are then presented and discussed. We finally present future research directions and conclude.
