--- a/paper/sections/method.tex
+++ b/paper/sections/method.tex
@@ -1,8 +1,8 @@
 \section{Method}
 \label{method}
-Measuring the structure of value creation by individuals is nearly impossible in most in open collaboration projects, in particular when they do not involve writing software code, which can be compiled, executed and tested on computers. However, like in Wikipedia, the most common way to code knowledge is natural language, which cannot be executed and tested for performance. Bi-partite networks models of editors and their contributions to article provide a very general framework   to understand the structure of value creation in open collaboration. 
+Measuring the structure of value creation by individuals is nearly impossible in most in open collaboration projects, in particular when they do not involve writing software code, which can be compiled, executed and tested on computers. However, like in Wikipedia, the most common way to code knowledge is natural language, which cannot be executed and tested for performance. So often very rough, or worse misleading metrics are used, for instance on Wikipedia edit count is widely used \cite{editcountitis}. Bi-partite network models of editors and their contributions to articles provide a general framework  to understand the structure of value creation in open collaboration. 
 
-We consider a binary matrix $M_{ea} \equiv M$ of editors having contributed to a category of articles on Wikipedia: $M_{ea}$ takes value $1$ if editor $e$ has modified article $a$, $0$ otherwise. For the category {\it Feminist Writers}, as presented on Figure \ref{fig:triangle}, $M$ exhibits a triangular structure with a few editors having modified a lot of articles while many editors have contributed to at best a few articles. Similarly, a few articles were modified by a lot of editors, while a vast majority of articles were touched only by one or very few authors. $M$ is the only input of the {\it bi-partite random walker} model described thereafter, for characterizing the structure and the value of contributions in open collaboration.
+We consider a matrix $M_{ea} \equiv M$ of all editors having contributed to a category of articles on Wikipedia: $M_{ea}$ takes value $1$ if editor $e$ has edited article $a$, and $0$ otherwise. Note that $M$ only shows which editors have {\it touched} which article, and importantly not their edit count for each article. For the category {\it Feminist Writers}, as presented on Figure \ref{fig:triangle}, $M$ exhibits a triangular structure where the most contributing editors having touched most of the articles and the less contributing editors having touched mainly heavily-touched articles. Similarly, a few articles are edited by a most editors, while the lesser touched articles are edited mainly by heavily-touching editors. $M$ is the only input of the {\it bi-partite random walker} model described thereafter, for characterizing the structure and the value of contributions in open collaboration.
 
 \begin{figure*}[!t]
 \centering
@@ -12,7 +12,7 @@ We consider a binary matrix $M_{ea} \equiv M$ of editors having contributed to a
 \end{figure*}
 
 
-Given $M$, a simple way to assess the contribution value of an editor is obtained by summing the number of articles ever edited over a set of articles. Similarly, a simple {\it quality} measure for an article is the sum of editors who have ever modified it, following the famous adage on open source development: ``Given eyeballs, all bugs shallow" \cite{raymond1999}. These crude expertise and quality metrics for respectively editors and articles given by,
+Given $M$, a simple way to assess the contribution value of an editor is obtained by summing the number of articles ever edited out of a set of articles. Similarly, a simple {\it quality} measure for an article is the sum of editors who have ever modified it, following the famous adage on open source development: ``Given enough eyeballs, all bugs are shallow" \cite{raymond1999}. These crude expertise and quality metrics for editors and articles respectively are given by,
 
 \begin{equation}
 \begin{cases}
@@ -22,15 +22,23 @@ Given $M$, a simple way to assess the contribution value of an editor is obtaine
 \label{HHinit}
 \end{equation}
 
-are the zero\textsuperscript{th} order of our algorithm. They also constitute the initial step of the {\it method of reflections} proposed by Hidalgo et al. \cite{hidalgo2007,hidalgo2009}, which derives the value of producing entities (i.e. editors) from products (i.e. articles), and {\it vice versa}, iteratively. Adapted to Wikipedia, the first steps help capture the intuition behind the method of reflections for open collaboration:
+are the zero\textsuperscript{th} order of our algorithm. They are  the initial step of the {\it method of reflections} proposed by Hidalgo et al. \cite{hidalgo2007,hidalgo2009}, which derives the value of producing entities (i.e. editors) from products (i.e. articles), and {\it vice versa}. To help capture the intuition behind the method of reflections for open collaboration we walk through the first iterations, as they are adapted to Wikipedia:
 
 \begin{itemize}
-  \item {\bf 1\textsuperscript{st} order iteration} :  if an article has been edited by higher expertise editors (i.e. who have contributed to higher value articles), can we infer its quality? Conversely, if an editor has contributed to higher quality articles (i.e. who have been changed by more expert editors), can we evaluate the editor's expertise ?
-  \item {\bf 2\textsuperscript{nd} order iteration} : if an article has been changed by higher expertise editors who have edited higher value articles, which in turn have been edited by higher expertise contributors, can we infer its quality? Conversely, if an editor has edited higher quality articles, which have been edited by better editors who have edited higher quality articles, can we evaluate the expertise of the editor?
- \item {\bf and so on, recursively}.\\
+  \item {\bf 1\textsuperscript{st} order iteration}:  
+  \begin{itemize}
+  \item {\bf Articles} If an article has been edited by higher expertise editors, it is higher quality. That is, quality is a function of expertise calculated from zero\textsuperscript{th} iteration expertise scores.
+  \item {\bf Editors} Conversely, if an editor has contributed to higher quality articles, their expertise is higher. That is, expertise is a function of quality calculated from zero\textsuperscript{th} iteration quality scores.
+  \end{itemize}
+  \item {\bf 2\textsuperscript{nd} order iteration} : 
+    \begin{itemize}
+  \item {\bf Articles} If an article has been changed by higher expertise editors who have edited higher value articles, which in turn have been edited by higher expertise contributors, article quality is higher. That is, quality is a function of expertise calculated from 1\textsuperscript{st} iteration expertise scores.
+  \item {\bf Editors} Conversely, if an editor has edited higher quality articles, which have been edited by better editors who have edited higher quality articles, then expertise is higher. That is, expertise is a function of quality calculated from 1\textsuperscript{st} iteration quality scores.
+  \end{itemize}
+ \item {\bf And so on, recursively \ldots}.\\
 \end{itemize}
 
-Although the interpretation is difficult to imagine passed the very first iteration steps, the algorithm incorporates additional information on the quality (resp. expertise) of the article (resp. editor) from the previous iteration from expertise (resp. value) of editors (resp. of articles). The higher order steps of the method of reflection writes,
+Although the interpretation is difficult to imagine past the very first iteration steps, the algorithm incorporates additional information on the quality of the articles and expertise of editor at each iteration. The higher order iterations of the method of reflections are written as,
 
 \begin{equation}
 \begin{cases}
@@ -40,7 +48,7 @@ Although the interpretation is difficult to imagine passed the very first iterat
 \label{HHhigher}
 \end{equation}
 
-The method of reflection however suffers a number of problems, which are mostly rooted in the equal weights given to mutual influences of editors expertise over articles quality, and of articles quality on editors expertise. As a result, the method converges to a fixed point with all editors (resp. all articles) having the same value, as a case of consensus dynamics \cite{caldarelli2012network}. It has therefore been proposed to consider the {\it reflective method} as a Markov process of random walkers on a bi-partite network, jumping with some probability from one node type to another node type \cite{caldarelli2012network}. A schematic representation of the random walk process on a bi-partite network is depicted on Figure \ref{fig:jumpers}. The intuition is the following: a random walker jumps with some probability from an editor to a given article (i.e. the editor's expertise is positively influenced by the article's quality), and with another probability from an article to a given editor (i.e. the value of the article is positively by the editor's expertise). The matrix $M$ determines the probability functions for each node. If two nodes $e$ and $a$ are not directly connected $M_{ea} = 0$, and the transition probability is 0. The {\it bi-partite network random walker} model is an extension of the {\it Page Rank} Google search algorithm \cite{page1999pagerank} to two kind of nodes 
+The method of reflections however suffers from a problem which is rooted in the equal weight given to each score of the previous iteration. As a result, the method converges to a fixed point with all editors (and respectively all articles) having the same value, as a case of consensus dynamics \cite{caldarelli2012network}. It has therefore been proposed to consider giving variable weight to the scores from the previous iteration. It is also proposed to reconceptualize the {\it method of reflections} as a Markov process of random walkers on a bi-partite network, jumping with some probability from one node type to another node type \cite{caldarelli2012network}. A schematic representation of the random walk process on a bi-partite network is depicted in Figure \ref{fig:jumpers}. The intuition is the following: a random walker jumps with some probability from an editor to a given article (i.e. the editor's expertise is positively influenced by the article's quality), and with another probability from an article to a given editor (i.e. the value of the article is positively by the editor's expertise). The matrix $M$ determines the probability function between each pair of nodes. If two nodes $e$ and $a$ are not directly connected $M_{ea} = 0$, and the transition probability is 0. The {\it bi-partite network random walker} model is an extension of the {\it Page Rank} Google search algorithm \cite{page1999pagerank} to two kind of nodes 
 
 \begin{figure}[!t]
 \centering
@@ -49,7 +57,7 @@ The method of reflection however suffers a number of problems, which are mostly 
 \label{fig:jumpers}
 \end{figure}
 
-According to  \cite{caldarelli2012network}, we reformulate the method of reflection to account for jumps of the random walker on the bi-partite network of editors and articles. Let's call $w^{(n)}_e$ the expertise of an editor and $w^{(n)}_a$ the quality of an article at the $n^{th}$ iteration. We define the following Markov process on the bi-partite network of collaboration, 
+According to  \cite{caldarelli2012network}, we reformulate the method of reflections to account for jumps of the random walker on the bi-partite network of editors and articles. We call $w^{(n)}_e$ the expertise of an editor and $w^{(n)}_a$ the quality of an article at the $n^{th}$ iteration. We define the following Markov process on the bi-partite network of collaboration, 
 
 \begin{equation}
 \begin{cases}
@@ -68,9 +76,9 @@ G_{ae}(\alpha) = \frac{M_{ea} k_{a}^{-\alpha}}{\sum_{a' = 1}^{N_a} M_{ea'} k_{a'
  \end{cases}
 \end{equation}
 
-The transition matrices $G_{ea}(\beta)$ and $G_{ae}(\alpha)$ depend only on the initial conditions: the binary matrix $M$, as well as $k_e$ and $k_a$ given by (\ref{HHinit}). The variables $\alpha$ and $\beta$ control the transition probabilities in a similar way. We shall therefore explain only how $\beta$ influences the probability to jump from an article to an editor (i.e. the value of the article positively influences the editor's expertise). For $\beta = 0$, we recover the zero\textsuperscript{th} order iteration (\ref{HHinit}). For $\beta > 0$, the probability to jump from article $a$ to editor $e$ is a power law function $\sim 1/k_{e}^{\beta}$ of the sum of articles $k_{e}$  modified by editor $e$. Hence, the larger $k_{e}$, the lower the probability to jump from $a$ to $e$ relative to other editors. On the contrary, if $\beta < 0$ the probability to jump from an article to an editor is a positive function of the sum of articles modified by the editor. For $-1 < \beta < 0$, the function is concave, while for $\beta < -1$, the function is convex, which means that the more articles have been edited by the editor, the even more the positive influence on articles. In a nutshell, $\beta$ relates the amount of articles edited on the overall editor's expertise, which in turn has an influence on each edited article (along with the influence of other editors). If $\beta >> 0$ is positive, the positive influence  of the number of contributed articles on the editor's expertise decreases. If $\beta$ close to $0$, the number of contributed articles increase linearly the editor's expertise. The same considerations hold for $\alpha$ and the probability $G_{ae}(\alpha)$ to jump from an editor to an article (i.e. the expertise of the editor positively influences the quality of an article).
+The transition matrices $G_{ea}(\beta)$ and $G_{ae}(\alpha)$ depend only on the initial conditions: the binary matrix $M$, as well as $k_e$ and $k_a$ given by (\ref{HHinit}). The variables $\alpha$ and $\beta$ control the transition probabilities in a similar way. We shall therefore explain only how $\beta$ influences the probability to jump from an article to an editor (i.e. the value of the article positively influences the editor's expertise). For $\beta = 0$, we recover the zero\textsuperscript{th} order iteration (\ref{HHinit}). For $\beta > 0$, the probability to jump from article $a$ to editor $e$ is a power law function $\sim 1/k_{e}^{\beta}$ of the sum of articles $k_{e}$  modified by editor $e$. Hence, the larger $k_{e}$, the lower the probability to jump from $a$ to $e$ relative to other editors. On the contrary, if $\beta < 0$ the probability to jump from an article to an editor is a positive function of the sum of articles modified by the editor. For $-1 < \beta < 0$, the function is concave, while for $\beta < -1$, the function is convex, which means that the more articles have been edited by the editor, the even more the positive influence on articles. In a nutshell, $\beta$ relates the amount of articles edited on the overall editor's expertise, which in turn has an influence on each edited article (along with the influence of other editors). If $\beta >> 0$, the positive influence of the number of contributed articles on the editor's expertise decreases. If $\beta$ close to $0$, the number of contributed articles increase linearly the editor's expertise. The same considerations hold for $\alpha$ and the probability $G_{ae}(\alpha)$ to jump from an editor to an article (i.e. the expertise of the editor positively influences the quality of an article).
 
-We have verified that the {\it bi-partite network random walker} method converges. Figure \ref{fig:convergence} shows the evolution expertise $w_e$ ranked among editors having contributed to articles in the {\it Feminist Writers} category on Wikipedia for arbitrary control parameters: $(\alpha,\beta) =(-0.5, 0.5)$. Starting from the sum of contributed articles as the initial step, we can see how the algorithm progressively ranks editors: some editors with initial lowest rank, i.e. with few articles edited, get a higher rank as the number of iterations increases. Similarly, some initially high ranked editors, gradually drop in the ranking. In the case Wikipedia categories, the algorithm converges with clearly stable ranks, after nearly $50$ iterations.
+After each iteration we have exepertise and quality scores. With those scores one can rank editors and articles. When the rankings for both editors and articles do not change in two successive iterations we consider the method of reflections converged. We have verified that the {\it bi-partite network random walker} method converges on all our 12 Wikipedia categories.  Figure \ref{fig:convergence} shows the evolution of expertise $w_e$ ranked among editors having contributed to articles in the {\it Feminist Writers} category on Wikipedia for arbitrary control parameters: $(\alpha,\beta) =(-0.5, 0.5)$. Starting from the sum of contributed articles as the initial step, we can see how the algorithm progressively ranks editors: some editors with initial low rank, i.e. with few articles edited, get a higher rank as the number of iterations increases. They must have edit few, but high quality articles. Similarly, some initially high ranked editors, gradually drop in the ranking. They must have edited many, but low quality articles. In the case of category {\it Feminist Writers}, the algorithm converges with clearly stable ranks, after nearly $50$ iterations.
 
 \begin{figure}[!t]
 \centering
