--- a/paper/sections/related_work.tex
+++ b/paper/sections/related_work.tex
@@ -1,6 +1,6 @@
 \section{Related Work}
-To the best of our knowledge, our paper is the first attempt to quantify the structure and the impact of collaboration on value creation in open collaboration environments. Our model of {bi-partite random walkers} follows in the lineage of bi-partite networks -- with two node types -- in the global economy of countries competing for exporting products \cite{hidalgo2007,hidalgo2009}. The proposed {\it method of reflections} helps understand the competitive advantage (i.e., {\it fitness}) of countries from the types of products they sell, and moreover, whether other countries export similar products {\it ubiquity}. Most competitive countries are found to export non-ubiquitous products, for which they can charge higher price. The reflexive model has been iteratively improved and complemented in more recent work, mainly to fix the robustness of the method of reflections.\cite{tacchella2012new, cristelli2012competitors, tacchella2013economic, cristelli2013measuring}. Caldarelli et al. \cite{caldarelli2012network} have proposed an alternative method, based on biased Markov chains, which helps further understand the relations between two types of nodes in bi-partite networks. 
+To the best of our knowledge, our paper is the first attempt to quantify the value of contributions in open collaboration environments from the collaboration structure alone. Our model of {bi-partite random walkers} follows in the lineage of bi-partite networks -- networks with two node types -- in the global economy of countries competing for exporting products \cite{hidalgo2007,hidalgo2009}. Their proposed {\it method of reflections} helps understand the competitive advantage (i.e., {\it fitness}) of countries from the types of products they sell, and moreover, whether other countries export similar products {\it ubiquity}. The key insight is that competitive countries are found not only to export non-ubiquitous products, for which they can charge higher price, but all products even ubiquitous ones. The reflexive model has been improved and complemented in more recent work, mainly to fix the robustness of the method of reflections.\cite{tacchella2012new, cristelli2012competitors, tacchella2013economic, cristelli2013measuring}. Caldarelli et al. \cite{caldarelli2012network} have proposed an alternative method, based on biased Markov chains, which helps further understand the relations between two types of nodes in bi-partite networks. 
 
-At the opposite of networks of economic competition, collaboration networks have been studied early on in network sciences, in particular networks of co-authorship in scientific publications \cite{newman2001}, as well as patterns of self-organization in bi-partite networks of actors-movies\cite{ramasco2004self}. Similarly, the analysis of patterns in the Wikipedia bi-partite networks confirmed the existence overlapping cliques of densely connected articles and editors  \cite{jesus2009}. In the same study, clustering of densely connected cliques into larger modules \cite{guimera2007module} showed that topics aggregate editors by interest with highly coordinated efforts in densely populated clusters \cite{jesus2009}.
+Separately to networks of economic competition, collaboration networks have been studied early on in network sciences, in particular networks of co-authorship in scientific publications \cite{newman2001}, as well as patterns of self-organization in bi-partite networks of actors-movies\cite{ramasco2004self}. Similarly, the analysis of patterns in the Wikipedia bi-partite networks confirmed the existence overlapping cliques of densely connected articles and editors  \cite{jesus2009}. In the same study, clustering of densely connected cliques into larger modules \cite{guimera2007module} showed that topics aggregated editors by interest with highly coordinated efforts in densely populated clusters \cite{jesus2009}.
 
 In a series of Matlab contests aimed at collectively solving NP-hard problems, it was found that work shared as a public good helps individuals quickly reuse existing results, and thus, find better algorithms \cite{gulley2010}. Efforts have also been undertaken to assess the {\it expertise} of contributors \cite{geiger2013}, as well as the quality of articles \cite{wang2013tell} in Wikipedia.
